fix crash while setup on HTC M7

--- a/app/src/main/res/values/preferences_lists.xml
+++ b/app/src/main/res/values/preferences_lists.xml
@@ -36,6 +36,9 @@
     <string-array name="contrast">
         <item>@string/histogrammEqualization</item>
     </string-array>
+    <string-array name="contrast_default">
+        <item>@string/histogrammEqualization</item>
+    </string-array>
     <string-array name="standard_post">
         <item>@string/resize</item>
     </string-array>
